k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deplk8s
  labels:
    app: deplk8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deplk8s
  template:
    metadata:
      labels:
        app: deplk8s
    spec:
      containers:
      - name: deplk8s
        image: deplk8s:latest # Replace with gcr.io/YOUR_PROJECT_ID/deplk8s for cloud
        ports:
          - containerPort: 8080
        imagePullPolicy: IfNotPresent
