k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deplk8s-service
spec: 
  selector:
    app: deplk8s
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort # For cloud; use ClusterIP for local
