k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deplk8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: deplk8s.local # change to your nip.io, sslip.io or Freenom domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deplk8s-service
                port:
                  number: 80
